# Basic_Touhou

./: README.md
Game/: CMakeCache.txt  CMakeLists.txt  Final  GameManager.cpp  GameManager.h  Makefile  cmake_install.cmake  main.cpp  readme.txt
Game/BulletPatterns/: BulletPattern.cpp  BulletPattern.h  GreenPattern.cpp  GreenPattern.h  PinkPattern.cpp  PinkPattern.h
Game/Mobiles/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Mobile.cpp  Mobile.h  Player.cpp  Player.h
Game/Mobiles/MobileInterfaces/: ICanShoot.h  ICarryDamage.h
Game/Powerups/: ICanDrop.h
VulkanEngine/: CMakeCache.txt  README.md  changesStuff.txt  cmake_install.cmake  compile.cmd  compile.sh  notesForMac.txt  vulkan.h
VulkanEngine/shaders/: 26_shader_depth.frag  26_shader_depth.vert  frag.spv  vert.spv
